DE-1: Fixing folder name

--- a/src/DapperExtensions.Tests/DapperExtensions.Tests.csproj
+++ b/src/DapperExtensions.Tests/DapperExtensions.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Extensions\DapperExtensions.csproj" />
+    <ProjectReference Include="..\DapperExtensions\DapperExtensions.csproj" />
   </ItemGroup>
 
 </Project>
